Added Home page using return flask.send_from_directory('static', 'index.html') http://hostname:8090/ index.html has a link to swagger gui
